// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities can create NPC page URL 1`] = `"http://www.public.navy.mil/bupers-npc/reference/messages/NAVADMINS/Pages/NAVADMIN2017.aspx"`;

exports[`Utilities can create human readable strings of year values 1`] = `"2011"`;

exports[`Utilities can create human readable strings of year values 2`] = `"2013 and 2014"`;

exports[`Utilities can create human readable strings of year values 3`] = `"2010, 2011, 2012, 2013, and 2014"`;

exports[`Utilities can create message URL 1`] = `"http://www.public.navy.mil/bupers-npc/reference/messages/Documents/NAVADMINS/NAV2020/NAV20116.txt"`;

exports[`Utilities can create message identifier strings 1`] = `"FOOBAR2042"`;

exports[`Utilities can parse abnormal message URI 1`] = `
Object {
  "code": "NAV",
  "ext": ".txt",
  "id": "NAVADMIN20092",
  "num": "092",
  "type": "NAVADMIN",
  "url": "http://www.public.navy.mil/bupers-npc/reference/messages/Documents/NAVADMINS/NAV2020/NAV20092.txt",
  "year": "20",
}
`;

exports[`Utilities can parse fragment of message URI 1`] = `
Object {
  "code": "NAV",
  "ext": ".txt",
  "id": "NAVADMIN20080",
  "num": "080",
  "type": "NAVADMIN",
  "url": "http://www.public.navy.mil/bupers-npc/reference/messages/Documents/NAVADMINS/NAV2020/NAV20080.txt",
  "year": "20",
}
`;

exports[`Utilities can parse full message URI 1`] = `
Object {
  "code": "NAV",
  "ext": ".txt",
  "id": "NAVADMIN20111",
  "num": "111",
  "type": "NAVADMIN",
  "url": "http://www.public.navy.mil/bupers-npc/reference/messages/Documents/NAVADMINS/NAV2020/NAV20111.txt",
  "year": "20",
}
`;

exports[`Utilities can parse message ID 1`] = `
Object {
  "code": "NAV",
  "id": "NAVADMIN19042",
  "num": "042",
  "type": "NAVADMIN",
  "url": "http://www.public.navy.mil/bupers-npc/reference/messages/Documents/NAVADMINS/NAV2019/NAV19042.txt",
  "year": "19",
}
`;

exports[`Utilities can parse message name 1`] = `
Object {
  "code": "NAV",
  "id": "NAVADMIN20111",
  "num": "111",
  "type": "NAVADMIN",
  "url": "http://www.public.navy.mil/bupers-npc/reference/messages/Documents/NAVADMINS/NAV2020/NAV20111.txt",
  "year": "20",
}
`;

exports[`Utilities can parse message name 2`] = `
Object {
  "code": "NAV",
  "id": "NAVADMIN20092",
  "num": "092",
  "type": "NAVADMIN",
  "url": "http://www.public.navy.mil/bupers-npc/reference/messages/Documents/NAVADMINS/NAV2020/NAV20092.txt",
  "year": "20",
}
`;

exports[`Utilities can parse message name 3`] = `
Object {
  "code": "ALN",
  "id": "ALNAV15777",
  "num": "777",
  "type": "ALNAV",
  "url": "http://www.public.navy.mil/bupers-npc/reference/messages/Documents/ALNAVS/ALN2015/ALN15777.txt",
  "year": "15",
}
`;

exports[`Utilities can split objects into smaller objects based on length of a certain key 1`] = `
Array [
  Object {
    "name": "a",
    "text": "12345",
  },
  Object {
    "name": "a",
    "text": "6789",
  },
]
`;

exports[`Utilities can split objects into smaller objects based on length of a certain key 2`] = `
Array [
  Object {
    "name": "b",
    "text": "12345",
  },
]
`;

exports[`Utilities can split objects into smaller objects based on length of a certain key 3`] = `
Array [
  Object {
    "name": "c",
    "text": "01234",
  },
  Object {
    "name": "c",
    "text": "56789",
  },
  Object {
    "name": "c",
    "text": "01234",
  },
  Object {
    "name": "c",
    "text": "56789",
  },
]
`;

exports[`Utilities can split objects into smaller objects based on length of a certain key 4`] = `
Array [
  Object {
    "name": "a",
    "text": "12345",
  },
  Object {
    "name": "a",
    "text": "6789",
  },
  Object {
    "name": "b",
    "text": "12345",
  },
  Object {
    "name": "c",
    "text": "01234",
  },
  Object {
    "name": "c",
    "text": "56789",
  },
  Object {
    "name": "c",
    "text": "01234",
  },
  Object {
    "name": "c",
    "text": "56789",
  },
]
`;
